--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-elements": "1.2.0",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
